# foundryvtt-docker

./: .autorc  .babelrc  .dockerignore  .gitattributes  .gitignore  .kodiak.toml  .prettierignore  .yarnrc.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.bak  LICENSE  LICENSE.md  Makefile  README.md  docker-compose.yml  nuxt.config.js  package.json  renovate.json  tailwind.config.js  tsconfig.json  webpack.config.js
.auto/plugins/: release.js
.github/: FUNDING.yml
.nuxt/: App.js  client.js  index.js  router.js  routes.json  server.js  store.js  utils.js
.parcel-cache/: 25704933644a7624  29d61689fa799a92  2d4528686babda00  38bde9cea51df464  39092835004fc703.txt  3df427c82a753406  4625c8eca4b9d6cc  4f33e99a0e729647  6917c4fb45888d39  78757f4e57201286  808641b6bd1a7ac9  b2fd395fddf2b6ed  b9cf35726adce341  ba8934ff3b4a294d  d765d4214a7b020d.txt  fc67bc6608371f37  lock.mdb
client/: index.html  index.scss  index.ts  setup.ts
components/: installation.vue  overlay-image.vue  upload-foundry.vue
config/: webpack.config.server.js
docs/: kube.md
layouts/: default.vue
pages/: index.vue
plugins/: veutify.ts
public/: index.html  success.html
scripts/: run.sh
server/: Cargo.toml  index.mjs  index.ts
server/api/: exit.mjs  exit.ts  uploader.mjs  uploader.ts
server/src/: config.rs  downloader.rs  events.rs  extractor.rs  handlers.rs  initialization.rs  launch.rs  main.rs  server.rs  utils.rs
server/static/: index.css  index.html  index.js
server/utils/: deleteFiles.mjs  dirs.mjs  dirs.ts  downloadTimedUrl.mjs  downloadTimedUrl.ts  json.mjs  json.ts  validUrl.mjs  validUrl.ts
src/: uploader.js
(+21 files in other folders)
