[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rocket_server"
path = "src/main.rs"


[dependencies]
rocket= { version = "0.5", features = ["json"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"