[package]
name = "server"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "foundry-watcher"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
zip = "5"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = "0.4.40"
anyhow = "1.0.97"
lazy_static = "1.5.0"
serde_json = "1"
bytes = "1"
futures-util = "0.3"
actix-multipart = "0"
